替换不推荐的方法